--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.unity.2d.sprite": "file:E:\\Unity\\2020.3.25f1\\Editor\\Data\\Resources\\PackageManager\\BuiltInPackages\\com.unity.2d.sprite",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "2.8.9",
     "com.unity.collab-proxy": "1.17.7",
     "com.unity.ide.rider": "3.0.18",
